# RenewableDataRangers

./: .gitignore  README.md  pyproject.toml
Airflow_Dags/: 1_DAG_Data_Extraction.py  2_DAG_HDFS_Old_Data_Delete.py  5_DAG_Gold_Layer_Transformation.py
Data_Extraction/: ingest_api.py
Docker_Astro_Airflow/: Dockerfile  docker-compose.override.yml  requirements.txt
Docker_Astro_Airflow/.astro/: config.yaml
Docker_Astro_Airflow/dags/: 3_DAG_AirByte_to_Hadoop.py  4_DAG_Silver_Layer_Transformation.py  5_DAG_Gold_Layer_Transformation.py
Files_Transfer_Scripts/: AirByte_to_Hadoop.py
PostgreSQL_cmd/: Gold_Layer.sql  Silver_Layer.sql
S3_schemas_for_Airbyte/: a.json  airbyte_streams_schemas.json  commodity_stream_schemas.json  electricity_stream_schemas.json  iso_stream_schemas.json  transaction_stream_schemas.json
Scripts_Files_Transfer/: AirByte_to_Hadoop.py  HDFS_Old_Data_Delete.py  Local_Hadoop_Instructions.md
Scripts_PySpark/Bronze_Layer/: electricity.csv  iso.csv
Scripts_PySpark/Scripts/: Gold_Layer_Transformation.py  Silver_Layer_Transformation.py  example1.py
Spark_Scripts/: Gold_Layer_Transformation.py  Silver_Layer_Transformation.py
Spark_Scripts/Bronze_Layer/: commodity.csv  electricity.csv  iso.csv  transaction.csv
Spark_Scripts/Scripts/: Gold_Layer_Transformation.py  Silver_Layer_Transformation.py  example2.py
Tableau/: .~report__16575.twbr  report.twb
nonUsed_DockerConfigs/Apache_Spark_configs/: Dockerfile  docker-compose.yml
nonUsed_DockerConfigs/Hadoop_configs/hadoop-docker-hadoop-3/: docker-compose.yaml
